# Environment_Setup_AI_Agent

./: .gitignore  README.md  START_WINDOWS_ONE_CLICK.bat  pyproject.toml  requirements.txt
configs/: default.yaml
data/memory/: long_term.json
src/: cli.py
src/agents/: __init__.py  analyzer.py  base.py  executor.py  orchestrator.py  planner.py  reporter.py  scanner.py  verifier.py
src/agents/executors/: __init__.py  java_executor.py  node_executor.py  python_executor.py
src/core/: __init__.py  config.py  errors.py  llm_engine.py  memory.py  metrics.py  safety.py
src/tools/: __init__.py  filesystem.py  git.py  shell.py
src/workflow/: __init__.py  graph.py  state.py
