[tool.poetry]
name = "setup-agent-ai"
version = "1.0.0"
description = "AI-powered intelligent environment setup agent"
authors = ["SetupAgent Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"
pyyaml = "^6.0"
langgraph = "^0.0.20"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
openai = "^1.0.0"
anthropic = "^0.15.0"
aiofiles = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
setup-agent = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"